tests/errors/constant-pattern-type.ari
const FLAG: bool = true;

fn main() -> i64 {
  match 1 {
    FLAG => 1,
    _ => 0,
  }
}
